--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,11 +40,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 <div id="footer">
 	<div class="container">
 		<section>
-			<header>
+			<!-- <header> -->
 				<h2>Get in touch</h2>
 				<span class="byline">For general enquiries about EACL, email <a href="mailto:eacl-secretary@aclweb.org">eacl-secretary@aclweb.org</a>. 
 For specific enquiries, please contact the relevant EACL Board member.</span>
-			</header>
+			<!-- </header> -->
 <!-- TODO: Add potential social media links here
 			<ul class="contact">
 				<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
