Updated front page style
Updated front page style to fit the whole text

--- a/assets/css/eacl-style.css
+++ b/assets/css/eacl-style.css
@@ -6,7 +6,7 @@
 
 .featured-item
 {
-	height: 420px;
+	height: 470px; /* 420px */
 }
 
 .featured-item-pennant
@@ -16,7 +16,7 @@
 
 .featured-item-text
 {
-	height: 145px;
+	height: 195px; /* 145px */
 }
 
 .logo-image-background
